--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==2.1.1
 cleo==2.0.1
 click==8.1.3
 colorama==0.4.5
+coverage==7.4.0
 crashtest==0.4.1
 distlib==0.3.6
 Django==5.0.1
